Fix the issue where when scrolling the header is not completely covered

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ body {
   background-color: black;
   opacity: 0.9;
   text-align: center;
+  margin: 0;
 }
 
 /* Header */
@@ -23,7 +24,8 @@ header {
   position: fixed;
   width: 100%;
   align-items: center;
-  background-color: black
+  background-color: black;
+  flex: 1;
 }
 
 /* Logo */
@@ -64,12 +66,6 @@ nav span {
   background-image: url(../../resources/Images/img-mission-background.jpg);
   height: 700px;
   padding-top: 70px;
-}
-
-.flex-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
 }
 
 #mission .content {
